--- a/CompanyNews/Dictionary/Table.xaml
+++ b/CompanyNews/Dictionary/Table.xaml
@@ -7,18 +7,34 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Margin" Value="0,10,0,14"/>
+        <Setter Property="Margin" Value="0,10,0,10"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
-                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
-                        <TextBlock Text="{TemplateBinding Content}" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                    </Border>
+                    <Grid>
+                        <Border BorderBrush="{TemplateBinding BorderBrush}" 
+                            BorderThickness="{TemplateBinding BorderThickness}" 
+                            Background="{TemplateBinding Background}" 
+                            Padding="{TemplateBinding Padding}" 
+                            Margin="0,0,0,2">
+                            <!-- Добавлено изменение отступа -->
+                            <TextBlock Text="{TemplateBinding Content}" 
+                                   TextWrapping="Wrap" 
+                                   VerticalAlignment="Center" 
+                                   HorizontalAlignment="Center"/>
+                        </Border>
+                        <Border Background="Black" 
+                            Height="0.9" 
+                            VerticalAlignment="Bottom" 
+                            Margin="0,0,0,-10" />
+                        <!-- Разделительная линия -->
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+
 
     <Style x:Key="CustomDataGridStyle" TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MaterialDesignDataGrid}">
         <Setter Property="Template">
