--- a/CompanyNews/Views/Authorization/AuthorizationPage.xaml
+++ b/CompanyNews/Views/Authorization/AuthorizationPage.xaml
@@ -98,7 +98,7 @@ HorizontalAlignment="Right" VerticalAlignment="Top" Height="Auto" Width="300" Ma
 
         </Grid>
 
-        <Grid Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,50" ToolTip="Количество читателей сервиса"
+        <Grid Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,50" ToolTip="Количество читателей сервиса."
               ToolTipService.InitialShowDelay="0">
 
             <Grid.ColumnDefinitions>
